Update _config.yml with hmfaysal-omega-theme

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
+remote_theme: hmfaysal/hmfaysal-omega-theme
+
 title:            Site Title
 description:      Site description for the metas.
 logo:             omikron.png
