--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 remote_theme: hmfaysal/hmfaysal-omega-theme
 
-title:            Site Title
-description:      Site description for the metas.
+title:            Kanjo (Jo) Melo's Portfolio
+description:      Here you can find all the products and projects I have built recently!
 logo:             omikron.png
 disqus_shortname: shortname
 # Assign a default image for your site's header and footer
