--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,13 @@ remote_theme: hmfaysal/hmfaysal-omega-theme
 
 title:            Kanjo (Jo) Melo's Portfolio
 description:      Here you can find all the products and projects I have built recently!
-logo:             omikron.png
+logo:             ![Image](/images/Headshot (1 of 1).jpg)
 disqus_shortname: shortname
 # Assign a default image for your site's header and footer
 default_bg:       default_bg.jpg
 search:           true
 share:            true
-# Read Time is a calculator tp provide post read-time based on word count. Usage is recommended.
+# Read Time is a calculator to provide post read-time based on word count. Usage is recommended.
 readtime:         true
 # Turn on or off the fin animations in the header and footer
 triangleheader:	  true
